--- a/Modular Complex System/Turn-based RPG/Turn-based RPG.csproj
+++ b/Modular Complex System/Turn-based RPG/Turn-based RPG.csproj
@@ -297,11 +297,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Buff.cs" />
     <Compile Include="Assets\Scripts\Character.cs" />
-    <Compile Include="Assets\Scripts\MagicPower.cs" />
-    <Compile Include="Assets\Scripts\PhysicalPower.cs" />
     <Compile Include="Assets\Scripts\Powers.cs" />
     <Compile Include="Assets\Scripts\RPGStats.cs" />
+    <Compile Include="Assets\Scripts\Status.cs" />
     <Compile Include="Assets\Scripts\UIBar.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
