Undo button now works, setting the last player to be the current player and removing the last move set from the move list. Changed how damage is dealt, working on randomiser for hit chance (currently the hit rate is near 0% due to nature of unity random function)

--- a/Modular Complex System/Turn-based RPG/Assembly-CSharp.csproj
+++ b/Modular Complex System/Turn-based RPG/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Scripts\RPG system\EnemyBehaviour.cs" />
      <Compile Include="Assets\Scripts\RPG system\EnemyUI.cs" />
      <Compile Include="Assets\Scripts\RPG system\HoverTextStorage.cs" />
+     <Compile Include="Assets\Scripts\RPG system\MoveConfirmMenu.cs" />
      <Compile Include="Assets\Scripts\RPG system\Powers.cs" />
      <Compile Include="Assets\Scripts\RPG system\RPGStats.cs" />
      <Compile Include="Assets\Scripts\RPG system\StateManager.cs" />
