--- a/Modular Complex System/Turn-based RPG/Assembly-CSharp.csproj
+++ b/Modular Complex System/Turn-based RPG/Assembly-CSharp.csproj
@@ -84,6 +84,7 @@
      <Compile Include="Assets\Scripts\RPG system\Status.cs" />
      <Compile Include="Assets\Scripts\RPG system\TargetSelection.cs" />
      <Compile Include="Assets\Scripts\RPG system\TurnBehaviour.cs" />
+     <Compile Include="Assets\Scripts\RPG system\UIController.cs" />
      <Compile Include="Assets\UI\Fonts\Script\scriptTexttest.cs" />
      <None Include="Assets\Animations\RPG Character Animation Pack\Elements\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
      <None Include="Assets\Animations\RPG Character Animation Pack\Elements\ImageEffects\Shaders\NoiseEffectShaderRGB.shader" />
@@ -209,15 +210,6 @@
  </Reference>
  <Reference Include="UnityEditor.Graphs">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/UnityEditor.Graphs.dll</HintPath>
- </Reference>
- <Reference Include="UnityEditor.Android.Extensions">
- <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/AndroidPlayer/UnityEditor.Android.Extensions.dll</HintPath>
- </Reference>
- <Reference Include="UnityEditor.iOS.Extensions">
- <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iOSSupport/UnityEditor.iOS.Extensions.dll</HintPath>
- </Reference>
- <Reference Include="UnityEditor.WebGL.Extensions">
- <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/WebGLSupport/UnityEditor.WebGL.Extensions.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.WindowsStandalone.Extensions">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/windowsstandalonesupport/UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
