testing camera movement out in this project (camera will look at attacker, and also look at who they're attacking with different angles. No group attacks implimented)

--- a/Modular Complex System/Turn-based RPG/Turn-based RPG.csproj
+++ b/Modular Complex System/Turn-based RPG/Turn-based RPG.csproj
@@ -309,6 +309,7 @@
     <Compile Include="Assets\Scripts\LoadScene.cs" />
     <Compile Include="Assets\Scripts\RPG system\Buff.cs" />
     <Compile Include="Assets\Scripts\RPG system\ButtonBehaviour.cs" />
+    <Compile Include="Assets\Scripts\RPG system\CameraMovement.cs" />
     <Compile Include="Assets\Scripts\RPG system\Character.cs" />
     <Compile Include="Assets\Scripts\RPG system\ClassInfo.cs" />
     <Compile Include="Assets\Scripts\RPG system\EnemyBehaviour.cs" />
